--- a/index.html
+++ b/index.html
@@ -153,5 +153,15 @@
             Hecho con Claude 3.5 | Por Charles Rodríguez Rojas para María Claudia Soto Fonzeca
         </div>
     </div>
+    <div class="container">
+        <h1 class="main-text">AIon 1.0</h1>
+        <div class="service-status">
+            <div class="service-status-dot"></div>
+            <span>Servicio Activo - Sistema Operativo</span>
+        </div>
+        <div class="credits">
+            Hecho con Claude 3.5 | Por Charles Rodríguez Roj
+        </div>
+    </div>
 </body>
 </html>
